More sections Created in the Quiz game The main section for the quiz with the input tag to get the player user name and to the right is an audio to make the game fun. Below this are the question for the quiz game

--- a/assets/game.css
+++ b/assets/game.css
@@ -14,6 +14,15 @@ body{
     background-attachment: scroll;
 }
 
+.ull{
+    background-color: beige;
+    color: black;
+    font-size: large;
+    line-height: 2em;
+    overflow: hidden;
+    width: 10%;
+}
+
 .links{
     justify-content: space-around;
     margin-top: 55px;
