--- a/assets/game.css
+++ b/assets/game.css
@@ -1,27 +1,19 @@
 *,
 **::before,
 **::after{
+    box-sizing: border-box;
     padding: 0;
-    margin: 0;
-   box-sizing: border-box;
+    margin:0;
 }
 
 body{
-    color: #333;
-    background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);  
-    background-image: url(/assets/images/flowers.avif);
-    background-image: url(/assets/images/nice.avif);
-    background-attachment: scroll;
+    background-image: url(/asset/images/nice.avif);
+    background-size:contain;
 }
 
-.ull{
-    background-color: beige;
-    color: black;
-    font-size: large;
-    line-height: 2em;
-    overflow: hidden;
-    width: 10%;
-}
+  .wrapper{
+    width: 100%;
+  }
 
 .links{
     justify-content: space-around;
@@ -29,7 +21,6 @@ body{
 }
 
    a{
-    
     justify-content: center;
     margin-left: 30px;
     padding: 16px;
@@ -47,47 +38,129 @@ body{
   
    }
 
-   button{
+  .links button{
   
     justify-content: center;
     margin-left: 30px;
     padding: 16px;
+    color: black;
     background-color: bisque;
-    
     border-radius: 2px;
 }
 
 
-   .main{
-      
-      margin-top: 150px;
-      color: #6B5B95;
-      font-size: larger;
-      font-weight: bolder;
-      display: grid;
-      justify-content: center;
-      text-align: center;
-   }
-
-
-
-    .main a{
-        width: 180px;
-    }
-
-
-
-   .large{
-    font-size: larger;
-    background-color: aliceblue;
-    transform:scale(1.3);
-   }
-
-
-h2{
-    width: 390px;;
-    height: 3vh;
-    font-size: large;
-    border-radius: 2px solid green;
+.main{
+    width: 50%;
+    align-self: center;
     justify-content: center;
+    margin-left: 250px;
+    margin-right: 250px;
+    padding-right: 50px;
+    padding-left: 100px;
+    background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);
+}
+.main img{
+    aspect-ratio: 3-3;
+}
+
+section{
+    color:black;
+    font-size: large;
+    margin-left: 150px;
+    margin-right: 250px;
+    padding-top: 20px;
+    margin-top: 30px;
+    border-radius: 10px;
+    width: 80%;
+    height: 120vh;
+    background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);
+}
+section .details{
+    margin-left: 4px;
+    margin-top: 10px;
+    padding-top: 10px;
+  background-color: #6B5B95;
+  height: 10vh;
+   
+}
+
+audio{
+    display: flex;
+    float: right;
+    margin-right: 15px;
+    width: 15%;
+    padding-top: 10px;
+    margin-top: 12px;
+    color: #6B5B95;
+    
+}
+
+audio:hover{
+    background-color: #6B5B95;
+}
+input{
+    margin-top: 12px;
+    width: 17%;
+    height:4vh;
+    padding-left: 15px;
+    
+}
+
+
+.question{
+    margin-left: 45px;
+   
+
+}
+
+section .question ul{
+    width:60%;
+    height: 38vh;
+    border-radius: 7px;
+    
+    border-radius: 6px;
+    background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);
+    list-style-type: lower-alpha;
+    gap:12px;
+    margin-top: 7px;
+    padding-top: 3px;
+}
+
+li{
+    padding: 12px;
+    margin-top: 12px;
+    background-color: aqua;
+    border-radius: 6px;
+    width: 80%;
+
+
+}
+
+
+.names{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: oblique;
+    background-color: #6B5B95;
+    opacity: 1;
+    padding-left: 12px;
+}
+ section ul li:nth-child(2n+1){
+    background-color: chartreuse;
+}
+
+section ul li:hover:nth-child(2n+1){
+    background-color: burlywood;
+}
+
+li:checked{
+    background-color: black;
+}
+
+li:hover{
+    background-color: azure;
+}
+
+button{
+    background-color: plum;
+    color: aliceblue;
 }
