Updated Asset folder,html, js and css file The comptia img was added to the asset folder and question 2 and three were added to the html file. Therefore, the style for the former and later were added to the css file. In addition, the js code was written to prevent the user from clicking multiple options and whenever an option is clicked, the right answer will be shown in the option

--- a/assets/game.css
+++ b/assets/game.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-image: url(/asset/images/nice.avif);
+    background-image: url(/assets/images/flowers.avif);
     background-size:contain;
 }
 
@@ -59,6 +59,7 @@ body{
     padding-left: 100px;
     background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);
 }
+
 .main img{
     aspect-ratio: 3-3;
 }
@@ -72,15 +73,16 @@ section{
     margin-top: 30px;
     border-radius: 10px;
     width: 80%;
-    height: 120vh;
+    height: 180vh;
     background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);
 }
+
 section .details{
     margin-left: 4px;
     margin-top: 10px;
     padding-top: 10px;
-  background-color: #6B5B95;
-  height: 10vh;
+    background-color: #6B5B95;
+    height: 10vh;
    
 }
 
@@ -98,26 +100,23 @@ audio{
 audio:hover{
     background-color: #6B5B95;
 }
+
 input{
     margin-top: 12px;
     width: 17%;
     height:4vh;
-    padding-left: 15px;
-    
+    padding-left: 15px; 
 }
 
 
 .question{
     margin-left: 45px;
-   
-
 }
 
 section .question ul{
     width:60%;
     height: 38vh;
     border-radius: 7px;
-    
     border-radius: 6px;
     background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);
     list-style-type: lower-alpha;
@@ -132,8 +131,6 @@ li{
     background-color: aqua;
     border-radius: 6px;
     width: 80%;
-
-
 }
 
 
@@ -144,6 +141,7 @@ li{
     opacity: 1;
     padding-left: 12px;
 }
+
  section ul li:nth-child(2n+1){
     background-color: chartreuse;
 }
@@ -163,4 +161,38 @@ li:hover{
 button{
     background-color: plum;
     color: aliceblue;
+}
+
+/*style for the second question */
+.question2{
+    margin-left: 45px;
+}
+
+
+section .question2 ul{
+    width:60%;
+    height: 38vh;
+    border-radius: 7px;
+    border-radius: 6px;
+    background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);
+    list-style-type: lower-alpha;
+    gap:12px;
+    margin-top: 7px;
+    padding-top: 3px;
+}
+
+/*style for the third question */
+.question3{
+    margin-left: 45px;
+}
+section .question3 ul{
+    width:60%;
+    height: 38vh;
+    border-radius: 7px;
+    border-radius: 6px;
+    background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);
+    list-style-type: lower-alpha;
+    gap:12px;
+    margin-top: 7px;
+    padding-top: 3px;
 }
