--- a/assets/game.css
+++ b/assets/game.css
@@ -7,83 +7,17 @@
 }
 
 body{
-    background-image: url(/assets/images/flowers.avif);
-    background-size:contain;
-}
-
-  .wrapper{
-    width: 100%;
-  }
-
-.links{
-    justify-content: space-around;
-    margin-top: 55px;
-}
-
-   a{
-    justify-content: center;
-    margin-left: 30px;
-    padding: 16px;
-    background-color: bisque;
-    text-decoration: none;
-    border-radius: 2px;
-    
-
-   }
-
-   a:hover{
-    transition-duration: 4s;
-    color: #6B5B95;
-    background-color: brown;
+    background-image: url(/assets/images/nice.avif);
+    background-image: linear-gradient(to top left, rgba(81, 88, 133, 0.778) 0%, rgba(131, 81, 133, 0.9) 100%);
   
-   }
-
-  .links button{
-  
-    justify-content: center;
-    margin-left: 30px;
-    padding: 16px;
-    color: black;
-    background-color: bisque;
-    border-radius: 2px;
 }
 
-
-.main{
-    width: 50%;
-    align-self: center;
-    justify-content: center;
-    margin-left: 250px;
-    margin-right: 250px;
-    padding-right: 50px;
-    padding-left: 100px;
-    background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);
-}
-
-.main img{
-    aspect-ratio: 3-3;
-}
-
-section{
-    color:black;
-    font-size: large;
-    margin-left: 150px;
-    margin-right: 250px;
-    padding-top: 20px;
-    margin-top: 30px;
-    border-radius: 10px;
-    width: 80%;
-    height: 180vh;
-    background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);
-}
-
-section .details{
-    margin-left: 4px;
-    margin-top: 10px;
-    padding-top: 10px;
-    background-color: #6B5B95;
-    height: 10vh;
-   
+input{
+    margin-top: 12px;
+    width: 12%;
+    height:4vh;
+    padding-left: 15px; 
+    margin-left: 7px;
 }
 
 audio{
@@ -92,7 +26,7 @@ audio{
     margin-right: 15px;
     width: 15%;
     padding-top: 10px;
-    margin-top: 12px;
+    margin-top: 120px;
     color: #6B5B95;
     
 }
@@ -100,40 +34,26 @@ audio{
 audio:hover{
     background-color: #6B5B95;
 }
-
-input{
-    margin-top: 12px;
-    width: 17%;
-    height:4vh;
-    padding-left: 15px; 
+.details{
+    background-color: #6B5B95;
 }
 
-
-.question{
-    margin-left: 45px;
+.details .onebtn{
+    height: 4vh;
+    width: 15%;
+}
+.details #score{
+    background-color: azure;
+    color: black;
+    margin-left: 100px;
+    height: 7vh;
+    width: 15%;
+    border-radius: 50%;
 }
 
-section .question ul{
-    width:60%;
-    height: 38vh;
-    border-radius: 7px;
-    border-radius: 6px;
-    background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);
-    list-style-type: lower-alpha;
-    gap:12px;
-    margin-top: 7px;
-    padding-top: 3px;
+h1{
+    font-weight: bolder;
 }
-
-li{
-    padding: 12px;
-    margin-top: 12px;
-    background-color: aqua;
-    border-radius: 6px;
-    width: 80%;
-}
-
-
 .names{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: oblique;
@@ -142,57 +62,43 @@ li{
     padding-left: 12px;
 }
 
- section ul li:nth-child(2n+1){
+#question {
+    margin-top: 50px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #6B5B95;
+    margin-left: 12%;
+    padding-left: 150px;
+    font-weight: bolder;
+    padding-top: 50px;
+    border-radius: 9px;
+    margin-right: 12%;
+    height: 200vh;
+   
+}
+#question button:hover:nth-child(2n+1){
     background-color: chartreuse;
 }
 
-section ul li:hover:nth-child(2n+1){
-    background-color: burlywood;
-}
 
-li:checked{
-    background-color: black;
-}
-
-li:hover{
-    background-color: azure;
-}
-
-button{
-    background-color: plum;
-    color: aliceblue;
-}
-
-/*style for the second question */
-.question2{
-    margin-left: 45px;
-}
-
-
-section .question2 ul{
-    width:60%;
-    height: 38vh;
+#question button {
+    display: block;
+    
+    font-size: large;
+    font-weight: bold;
+    color: black;
+    margin-bottom: 10px;
+    width:50%;
+    height: 7vh;
     border-radius: 7px;
-    border-radius: 6px;
-    background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);
-    list-style-type: lower-alpha;
-    gap:12px;
-    margin-top: 7px;
-    padding-top: 3px;
-}
+    background-color:chocolate;
+    margin-top: 17px;
+    margin-left: 40px;
+  }
 
-/*style for the third question */
-.question3{
-    margin-left: 45px;
+#reveal{
+    background-color: darkorange;
+    color: black;
+    font-weight: bold;
 }
-section .question3 ul{
-    width:60%;
-    height: 38vh;
-    border-radius: 7px;
-    border-radius: 6px;
-    background-image: linear-gradient(to top left, rgba(217, 159, 159, 0.6) 0%, rgba(81, 88, 133, 0.9) 100%);
-    list-style-type: lower-alpha;
-    gap:12px;
-    margin-top: 7px;
-    padding-top: 3px;
-}
+ 
+ 
