--- a/assets/game.css
+++ b/assets/game.css
@@ -9,8 +9,13 @@
 body{
     background-image: url(/assets/images/nice.avif);
     background-image: linear-gradient(to top left, rgba(81, 88, 133, 0.778) 0%, rgba(131, 81, 133, 0.9) 100%);
-  
+ 
+    /* this is the wrapper for the app*/ 
 }
+#quiz-container{
+    width: 100%;
+}
+/*styling the inputfield */
 
 input{
     margin-top: 12px;
@@ -20,13 +25,14 @@ input{
     margin-left: 7px;
 }
 
+/*styling the audio */
 audio{
     display: flex;
     float: right;
-    margin-right: 15px;
+    margin-right: 195px;
     width: 15%;
     padding-top: 10px;
-    margin-top: 120px;
+    margin-top: 30px;
     color: #6B5B95;
     
 }
@@ -42,6 +48,7 @@ audio:hover{
     height: 4vh;
     width: 15%;
 }
+/*styling the scoreboard */
 .details #score{
     background-color: azure;
     color: black;
@@ -62,21 +69,24 @@ h1{
     padding-left: 12px;
 }
 
+/*styling the main body of the app which contains the questions*/
+
 #question {
     margin-top: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #6B5B95;
+    background-color: greenyellow;
     margin-left: 12%;
     padding-left: 150px;
     font-weight: bolder;
-    padding-top: 50px;
+    padding-top: 90px;
     border-radius: 9px;
     margin-right: 12%;
     height: 200vh;
    
 }
+
 #question button:hover:nth-child(2n+1){
-    background-color: chartreuse;
+    background-color: rgba(0, 0, 255, 0.312);
 }
 
 
@@ -95,10 +105,151 @@ h1{
     margin-left: 40px;
   }
 
+  /*styling the reveal buttob below the left hand corner */
+
 #reveal{
     background-color: darkorange;
     color: black;
     font-weight: bold;
 }
- 
- 
+/* added media queries */
+@media only screen and ( max-width:927px){
+    #question{
+        height: 200vh;
+    }
+    audio{
+       margin-right: 122px;
+    }
+}
+
+
+
+ @media only screen and ( max-width:833px){
+    #question{
+        height: 207vh;
+        padding-left: 38px;
+    }
+
+    #question button {
+        width: 69%;
+    }
+
+    audio{
+        margin-top:54px; 
+    }
+ }
+
+ @media only screen and ( max-width:753px){
+    #question{
+       height: 250vh;
+    }
+
+    audio{
+        margin-right: 126px; 
+    }
+    input {
+      
+        width: 20%;
+       
+    }
+}
+
+ @media only screen and ( max-width:696px){
+    #question{
+       height: 220vh;
+    }
+
+    audio{
+        margin-right: 106px; 
+    }
+}
+
+
+@media only screen and ( max-width:633px){
+    #question{
+       height: 210vh;
+    }
+
+    audio{
+        margin-right: 88px; 
+    }
+}
+
+@media only screen and ( max-width:516px){
+    #question{
+       height: 220vh;
+    }
+
+    audio{
+        margin-right:84px; 
+    }
+    input {
+      
+        width: 23%;
+       
+    }
+}
+@media only screen and ( max-width:410px){
+    #question{
+       height: 230vh;
+    }
+
+    audio{
+        margin-right: 76px; 
+    }
+    input {
+      
+        width: 28%;
+       
+    }
+
+    #question button {
+        margin-left: 27px;
+    }
+
+}
+
+@media only screen and ( max-width:340px){
+    #question{
+       height: 240vh;
+    }
+    input {
+      
+        width: 29%;
+       
+    }
+    .details .onebtn {
+
+        width: 19%;
+    }
+
+    .details #score {
+        background-color: azure;
+        
+        margin-left: 53px;
+       
+    }
+
+    audio{
+        margin-right: 48px; 
+    }
+}
+
+@media only screen and ( max-width:326px){
+    #question button {
+        margin-left: 11px;
+        width:75%;
+    }
+}
+
+@media only screen and ( max-width:279px){
+    #question{
+       height: 260vh;
+    }
+
+    
+}
+
+
+
+
