Updated README and Css file ! The readme was updated and also the css file with styling for the home and navigation button.

--- a/assets/game.css
+++ b/assets/game.css
@@ -25,7 +25,7 @@ body{
     justify-content: center;
     margin-left: 30px;
     padding: 16px;
-    background-color: bisque;
+    background-color:greenyellow;
     text-decoration: none;
     border-radius: 2px;
     
@@ -45,7 +45,7 @@ body{
     margin-left: 30px;
     padding: 16px;
     color: black;
-    background-color: bisque;
+    background-color:greenyellow;
     border-radius: 2px;
 }
 /*styling the inputfield */
