troubleshooting links for background image

--- a/assets/review.css
+++ b/assets/review.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(assets/images/nice.avif);
+    background-image: url(/assets/images/nice.avif);
     background-size: cover;
    
     
