--- a/assets/review.css
+++ b/assets/review.css
@@ -1,9 +1,6 @@
 body{
-    background-image: url(/assets/images/nice.avif);
-    background-size: cover;
-   
-    
-  
+    background-image: url(./images/nice.avif);
+    background-size: cover; 
 }
 
 main{
