updated js,css The js was refactored to make input field to clear when the user submits  username. In addition to this, the color schemes was changed to more  appealing and contrasting in the css

--- a/assets/game.css
+++ b/assets/game.css
@@ -7,9 +7,7 @@
 }
 
 body{
-   
-    background-image: linear-gradient(to top left, rgba(81, 88, 133, 0.778) 0%, rgba(131, 81, 133, 0.9) 100%);
- 
+   background-color: #1A1A1D; 
     /* this is the wrapper for the app*/ 
 }
 #quiz-container{
@@ -21,14 +19,21 @@ body{
     margin-top: 55px;
 }
 
+#option{
+    margin-left: 400px;
+}
+
+ul{
+    color: azure;
+}
 
   .links button{
   
     justify-content: center;
     margin-left: 30px;
     padding: 16px;
-    color: black;
-    background-color:greenyellow;
+    color: whitesmoke;
+    background-color:#022140;
     border-radius: 2px;
 }
 /*styling the inputfield */
@@ -57,7 +62,7 @@ audio:hover{
     background-color: #6B5B95;
 }
 .details{
-    background-color: #6B5B95;
+    background-color: #022140;
 }
 
 .details .onebtn{
@@ -75,12 +80,13 @@ audio:hover{
 }
 
 h1{
+    color: whitesmoke;
     font-weight: bolder;
 }
 .names{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: oblique;
-    background-color: #6B5B95;
+    background-color: #022140;
     opacity: 1;
     padding-left: 12px;
 }
@@ -90,7 +96,8 @@ h1{
 #question {
     margin-top: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: greenyellow;
+    background-color:#022140;
+    color: beige;
     margin-left: 12%;
     padding-left: 150px;
     font-weight: bolder;
@@ -108,7 +115,6 @@ h1{
 
 #question button {
     display: block;
-    
     font-size: large;
     font-weight: bold;
     color: black;
@@ -116,7 +122,7 @@ h1{
     width:50%;
     height: 7vh;
     border-radius: 7px;
-    background-color:chocolate;
+    background-color:#cccccc;
     margin-top: 17px;
     margin-left: 40px;
   }
@@ -124,9 +130,12 @@ h1{
   /*styling the reveal buttob below the left hand corner */
 
 #reveal{
-    background-color: darkorange;
+    background-color:white;
     color: black;
     font-weight: bold;
+    margin-left:38%;
+    height:5vh ;
+    width:200px ;
 }
 /* added media queries */
 @media only screen and ( max-width:927px){
@@ -170,6 +179,15 @@ h1{
     }
 }
 
+@media only screen and ( max-width:684px){
+    #reveal{
+    
+        margin-left:37%;
+
+    }
+   
+}
+
  @media only screen and ( max-width:696px){
     #question{
        height: 220vh;
@@ -190,6 +208,20 @@ h1{
         margin-right: 88px; 
     }
 }
+@media only screen and ( max-width:586px){
+    #reveal{
+        margin-left:34%;
+    }
+}
+
+@media only screen and ( max-width:527px){
+    #reveal{
+        margin-left:30%;
+        height:4vh ;
+        width:170px ;
+        };
+    }
+
 
 @media only screen and ( max-width:516px){
     #question{
@@ -223,7 +255,15 @@ h1{
         margin-left: 27px;
     }
 
-}
+    #reveal{
+        margin-left:28%;
+        height:4vh ;
+        width:160px ;
+        };
+    }
+
+
+
 
 @media only screen and ( max-width:340px){
     #question{
@@ -256,6 +296,11 @@ h1{
         margin-left: 11px;
         width:75%;
     }
+    #reveal{
+        margin-left:25%;
+        height:4vh ;
+        width:150px ;
+        };
 }
 
 @media only screen and ( max-width:279px){
